infra/kubernetes/gke/shared/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drug-sales-ingress
  namespace: drug-sales
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3001
